[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Enemies/enemyParent.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Enemies/enemyFly.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemies/enemyFly.gd" type="Script" id=3]

[sub_resource type="Shader" id=135]
code = "shader_type canvas_item;

uniform vec4 hit_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float hit_strength : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 custom_color = texture(TEXTURE, UV);
	custom_color.rgb = mix(custom_color.rgb, hit_color.rgb, hit_strength);
	COLOR = custom_color;
}"

[sub_resource type="ShaderMaterial" id=136]
resource_local_to_scene = true
shader = SubResource( 135 )
shader_param/hit_color = Color( 1, 0, 0, 1 )
shader_param/hit_strength = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 2 )

[sub_resource type="Animation" id=2]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 3, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 2 )

[node name="enemyFly" instance=ExtResource( 1 )]
script = ExtResource( 3 )
MAX_SPEED = 20

[node name="Sprite" parent="." index="0"]
material = SubResource( 136 )
position = Vector2( 0, -3 )
texture = ExtResource( 2 )
hframes = 6
frame = 2

[node name="collision" parent="." index="1"]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "fly"
anims/attack = SubResource( 2 )
anims/fly = SubResource( 3 )

[node name="HurtBox" parent="." index="4"]
visible = false

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 4 )

[node name="EnemyStats" parent="." index="5"]
max_health = 3

[node name="HitBox" parent="." index="6"]
visible = false

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 5 )

[node name="wallLeft" type="RayCast2D" parent="." index="7"]
visible = false
position = Vector2( 0, -3 )
enabled = true
cast_to = Vector2( -6, 0 )
collision_mask = 2

[node name="wallRight" type="RayCast2D" parent="." index="8"]
visible = false
position = Vector2( 0, -3 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 2

[node name="playerDetector" type="RayCast2D" parent="." index="9"]
position = Vector2( 0, -3 )
enabled = true
cast_to = Vector2( 0, 19 )

[node name="ambushTimer" type="Timer" parent="." index="10"]
wait_time = 2.0
one_shot = true

[node name="shootTimerSearching" type="Timer" parent="." index="11"]
wait_time = 10.0
one_shot = true

[node name="mouthPosition" type="Position2D" parent="." index="12"]
visible = false

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="HurtBox"]
[editable path="HitBox"]
